zig-pkg/zig-0.0.0-Fp4XJG_h5A3OLpPXqVTJ1DRl3lZhqHp_fClrI7MUVjU_/test/cases/compile_errors/reify_enum_with_duplicate_tag_value.zig
export fn entry() void {
    const E = @Enum(u32, .nonexhaustive, &.{ "a", "b" }, &.{ 10, 10 });
    _ = E.a;
}

// error
//
// :2:58: error: enum tag value '10' for field 'b' already taken
// :2:58: note: previous occurrence in field 'a'
